@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - When we see JSON::MaybeXS we will recommend Cpanel::JSON::XS
+  - When we see JSON::MaybeXS we will diag on JSON::XS and JSON::PP as well
 
 1.86      2015-11-14 20:31:32 -0500
   - Added undocumented preamble to
